crates/pgls_pretty_print/tests/snapshots/multi/tests__lseg_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/lseg_60.sql
snapshot_kind: text
---
CREATE TABLE lseg_tbl ( s lseg );

INSERT INTO lseg_tbl VALUES ('[(1,2),(3,4)]');

INSERT INTO lseg_tbl VALUES ('(0,0),(6,6)');

INSERT INTO lseg_tbl VALUES ('10,-10 ,-3,-4');

INSERT INTO lseg_tbl VALUES ('[-1e6,2e2,3e5, -4e1]');

INSERT INTO lseg_tbl
VALUES (lseg(
point(
11,
22
),
point(
33,
44
)
));

INSERT INTO lseg_tbl VALUES ('[(-10,2),(-10,3)]');

INSERT INTO lseg_tbl VALUES ('[(0,-20),(30,-20)]');

INSERT INTO lseg_tbl VALUES ('[(NaN,1),(NaN,90)]');

INSERT INTO lseg_tbl VALUES ('(3asdf,2 ,3,4r2)');

INSERT INTO lseg_tbl VALUES ('[1,2,3, 4');

INSERT INTO lseg_tbl VALUES ('[(,2),(3,4)]');

INSERT INTO lseg_tbl VALUES ('[(1,2),(3,4)');

SELECT * FROM lseg_tbl;

SELECT pg_input_is_valid('[(1,2),(3)]', 'lseg');

SELECT * FROM pg_input_error_info('[(1,2),(3)]', 'lseg');
